force-app/main/default/objects/Account/fields/CC4i_Nombre_Completo_del_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>CC4i_Nombre_Completo_del_Asegurado__c</fullName>
    <label>Nombre Completo del Asegurado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>