force-app/main/default/objects/Account/fields/GLB_P1_Que_le_hemos_vendido__c.field-meta.xml
<CustomField>
    <fullName>GLB_P1_Que_le_hemos_vendido__c</fullName>
    <label>¿Qué le hemos vendido?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Seguro accidentes</fullName>
            </value>
            <value>
                <fullName>Seguro de auto</fullName>
            </value>
            <value>
                <fullName>Seguro de salud</fullName>
            </value>
            <value>
                <fullName>Seguro desempleo</fullName>
            </value>
            <value>
                <fullName>Seguro desgravamen</fullName>
            </value>
            <value>
                <fullName>Seguro de vida</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>