force-app/main/default/objects/Account/fields/GLBP1_Calculo_DV_Rut__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Calculo_DV_Rut__c</fullName>
    <formula>11- MOD(
VALUE (mid ( GLBP1_Rut__c, len(GLBP1_Rut__c) - 2, 1 )) *2 +
VALUE (mid ( GLBP1_Rut__c, len(GLBP1_Rut__c) - 3, 1 )) *3 +
VALUE (mid ( GLBP1_Rut__c, len(GLBP1_Rut__c) - 4, 1 )) *4 +
VALUE (mid ( GLBP1_Rut__c, len(GLBP1_Rut__c) - 5, 1 )) *5 +
VALUE (mid ( GLBP1_Rut__c, len(GLBP1_Rut__c) - 6, 1 )) *6 +
VALUE (mid ( GLBP1_Rut__c, len(GLBP1_Rut__c) - 7, 1 )) *7 +
VALUE (mid ( GLBP1_Rut__c, len(GLBP1_Rut__c) - 8, 1 )) *2 +
IF( LEN(GLBP1_Rut__c) = 10,
VALUE (mid ( GLBP1_Rut__c, len(GLBP1_Rut__c) - 9, 1 )) *3
, 0)
, 11)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cálculo DV Rut</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>