force-app/main/default/objects/Account/fields/GLBP1_Como_quiere_ser_atendida__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Como_quiere_ser_atendida__c</fullName>
    <label>¿Cómo quiere ser atendida?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email vencimiento 3 meses</fullName>
            </value>
            <value>
                <fullName>Email vencimiento 1 mes</fullName>
            </value>
            <value>
                <fullName>Atención presencial</fullName>
            </value>
            <value>
                <fullName>Atención remota</fullName>
            </value>
            <value>
                <fullName>Atención online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>