force-app/main/default/objects/Account/fields/GLBP1_Comportamiento__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Comportamiento__c</fullName>
    <label>Comportamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paga adelantado</fullName>
            </value>
            <value>
                <fullName>Paga al día</fullName>
            </value>
            <value>
                <fullName>Paga erráticamente</fullName>
            </value>
            <value>
                <fullName>Paga atrasado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>