force-app/main/default/objects/Account/fields/GLBP1_Compra_anualmente__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Compra_anualmente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compra anualmente</label>
    <type>Checkbox</type>
</CustomField>