force-app/main/default/objects/Account/fields/GLBP1_Cotiza__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Cotiza__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cotiza</label>
    <type>Checkbox</type>
</CustomField>