force-app/main/default/objects/Account/fields/GLBP1_DV_Rut__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_DV_Rut__c</fullName>
    <formula>RIGHT(GLBP1_Rut__c, 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DV Rut</label>
    <type>Text</type>
</CustomField>