force-app/main/default/objects/Account/fields/GLBP1_Estado_de_la_relacion__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Estado_de_la_relacion__c</fullName>
    <label>Estado de la relación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buena</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Mala</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>