force-app/main/default/objects/Account/fields/GLBP1_Frecuencia_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Frecuencia_de_ventas__c</fullName>
    <label>Frecuencia de ventas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensual</fullName>
            </value>
            <value>
                <fullName>Trimestral</fullName>
            </value>
            <value>
                <fullName>Semestral</fullName>
            </value>
            <value>
                <fullName>Anual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>