force-app/main/default/objects/Account/fields/GLBP1_Limite_de_credito__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Limite_de_credito__c</fullName>
    <label>Límite de crédito</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>