force-app/main/default/objects/Account/fields/GLBP1_Mantisa_Rut__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Mantisa_Rut__c</fullName>
    <formula>LEFT(GLBP1_Rut__c, FIND(&quot;-&quot;, GLBP1_Rut__c)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mantisa Rut</label>
    <type>Text</type>
</CustomField>