force-app/main/default/objects/Account/fields/GLBP1_Meta_de_venta_de_la_cuenta__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Meta_de_venta_de_la_cuenta__c</fullName>
    <label>Meta de venta de la cuenta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>