force-app/main/default/objects/Account/fields/GLBP1_Metodo_de_compra__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Metodo_de_compra__c</fullName>
    <label>Método de compra</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Chilecompra</fullName>
            </value>
            <value>
                <fullName>OC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>