force-app/main/default/objects/Account/fields/GLBP1_Nivel_de_descuento__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Nivel_de_descuento__c</fullName>
    <label>Nivel de descuento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>