force-app/main/default/objects/Account/fields/GLBP1_No_mensajes_telefono_movil__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_No_mensajes_telefono_movil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No recibir mensajes en teléfono móvil</label>
    <type>Checkbox</type>
</CustomField>