force-app/main/default/objects/Account/fields/GLBP1_PeriodoRetencion__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_PeriodoRetencion__c</fullName>
    <label>Periodo de retención</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>