force-app/main/default/objects/Account/fields/GLBP1_Producto_recomendado__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Producto_recomendado__c</fullName>
    <label>Producto recomendado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producto 3</fullName>
            </value>
            <value>
                <fullName>Elige tu hogar</fullName>
            </value>
            <value>
                <fullName>Seguro Hogar Contenido</fullName>
            </value>
            <value>
                <fullName>Bolso Protegido</fullName>
            </value>
            <value>
                <fullName>Sala Urgencia</fullName>
            </value>
            <value>
                <fullName>Seguro Multiasistencia</fullName>
            </value>
            <value>
                <fullName>Resp. Civil VEHICULO PARTICULAR</fullName>
            </value>
            <value>
                <fullName>Resp. Civil + Pérdida total VEHICULO PARTICULAR</fullName>
            </value>
            <value>
                <fullName>Resp. Civil VEHICULO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>Resp. Civil + Pérdida total VEHICULO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>AUTO ELÍGELO PREFERENTE VEHÍCULO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>AUTO ELÍGELO MARCA VEHÍCULO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>AUTO ELÍGELO MULTIMARCA VEHÍCULO COMERCIAL</fullName>
            </value>
            <value>
                <fullName>AUTO ELÍGELO PREFERENTE VEHÍCULO PARTICULAR</fullName>
            </value>
            <value>
                <fullName>AUTO ELÍGELO MARCA VEHÍCULO PARTICULAR</fullName>
            </value>
            <value>
                <fullName>AUTO ELÍGELO MULTIMARCA VEHÍCULO PARTICULAR</fullName>
            </value>
            <value>
                <fullName>Producto 1</fullName>
                <isActive>false</isActive>
                <label>Producto 1</label>
            </value>
            <value>
                <fullName>Producto 2</fullName>
                <isActive>false</isActive>
                <label>Producto 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>