force-app/main/default/objects/Account/fields/GLBP1_Rut__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Rut__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Digite el Rut sin puntos, con guión, ejemplo: 12345678-9</inlineHelpText>
    <label>Rut</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>