force-app/main/default/objects/Account/fields/GLBP1_Segmento_arquetipo__c.field-meta.xml
<CustomField>
    <fullName>GLBP1_Segmento_arquetipo__c</fullName>
    <label>Segmento arquetipo</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Empresa</fullName>
            </value>
            <value>
                <fullName>Familia numerosa</fullName>
            </value>
            <value>
                <fullName>Paciente particular</fullName>
            </value>
            <value>
                <fullName>PYME o autónomo</fullName>
            </value>
            <value>
                <fullName>Sin segmento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>