force-app/main/default/objects/Account/fields/IDTipoRegistro__c.field-meta.xml
<CustomField>
    <fullName>IDTipoRegistro__c</fullName>
    <formula>RecordType.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IDTipoRegistro</label>
    <type>Text</type>
</CustomField>