force-app/main/default/objects/Account/fields/vlocity_ins__OperatingHoursId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__OperatingHoursId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>DEPRECATED. This field is deprecated, please use the Operating Hours standard field.</description>
    <label>Operating Hours</label>
    <referenceTo>vlocity_ins__OperatingHours__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>