force-app/main/default/objects/Account/fields/ZRH_CodigoGrupoNegocio__c.field-meta.xml
<CustomField>
    <fullName>ZRH_CodigoGrupoNegocio__c</fullName>
    <description>Código Grupo de Negocio para Cuenta Holding</description>
    <label>Codigo Grupo de Negocio</label>
    <length>4</length>
    <type>Text</type>
</CustomField>