force-app/main/default/objects/Account/fields/ZRH_EsHolding__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EsHolding__c</fullName>
    <description>Campo para identificar si la cuenta es un Holding o un Contratante</description>
    <formula>ISBLANK(ParentId)</formula>
    <label>Es Holding</label>
    <type>Checkbox</type>
</CustomField>