force-app/main/default/objects/Account/fields/ZRH_EsPipeline__c.field-meta.xml
<CustomField>
    <fullName>ZRH_EsPipeline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar si la cuenta es Pipeline</description>
    <label>Es Pipeline</label>
    <type>Checkbox</type>
</CustomField>