force-app/main/default/objects/Account/fields/ZRH_InicioVigencia__c.field-meta.xml
<CustomField>
    <fullName>ZRH_InicioVigencia__c</fullName>
    <description>Campo fecha de inicio de vigencia de la cuenta negocio</description>
    <label>Inicio de vigencia</label>
    <type>Date</type>
</CustomField>