force-app/main/default/objects/Account/fields/ZRH_LM_Digito_Verificador__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Digito_Verificador__c</fullName>
    <label>Dígito Verificador</label>
    <length>1</length>
    <type>Text</type>
</CustomField>