force-app/main/default/objects/Account/fields/ZRH_LM_Direccion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Direccion__c</fullName>
    <label>Dirección</label>
    <length>255</length>
    <type>Text</type>
</CustomField>