force-app/main/default/objects/Account/fields/ZRH_LM_Edad__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Edad__c</fullName>
    <label>Edad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>