force-app/main/default/objects/Account/fields/ZRH_LM_N_Of_Casa_Dpto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_N_Of_Casa_Dpto__c</fullName>
    <label>N° Of/Casa/Dpto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>