force-app/main/default/objects/Account/fields/ZRH_LM_Num__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_Num__c</fullName>
    <label>N°</label>
    <length>255</length>
    <type>Text</type>
</CustomField>