force-app/main/default/objects/Account/fields/ZRH_LM_OF_Casa_Dpto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_OF_Casa_Dpto__c</fullName>
    <label>OF/Casa/Dpto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oficina</fullName>
            </value>
            <value>
                <fullName>Casa</fullName>
            </value>
            <value>
                <fullName>Departamento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>