force-app/main/default/objects/Account/fields/ZRH_LM_RUT__c.field-meta.xml
<CustomField>
    <fullName>ZRH_LM_RUT__c</fullName>
    <label>RUT</label>
    <length>30</length>
    <type>Text</type>
</CustomField>