force-app/main/default/objects/Account/fields/ZRH_NombreCorto__c.field-meta.xml
<CustomField>
    <fullName>ZRH_NombreCorto__c</fullName>
    <description>Nombre corto holding</description>
    <label>Nombre corto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>