force-app/main/default/objects/Account/fields/ZRH_Prima__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Prima__c</fullName>
    <description>Campo para agregar prima</description>
    <label>Prima</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>