force-app/main/default/objects/Account/fields/ZRH_Rut__c.field-meta.xml
<CustomField>
    <fullName>ZRH_Rut__c</fullName>
    <description>RUT para la cuenta business account y cuenta Agency/Brokerage</description>
    <externalId>true</externalId>
    <inlineHelpText>El formato del RUT debe ser 99999999-9</inlineHelpText>
    <label>RUT</label>
    <length>11</length>
    <type>Text</type>
</CustomField>