force-app/main/default/objects/Account/fields/ZRH_SucursalRecepcion__c.field-meta.xml
<CustomField>
    <fullName>ZRH_SucursalRecepcion__c</fullName>
    <description>Campo para en listar las sucursales de las oficinas Zurich</description>
    <label>Sucursal Recepción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Santiago</fullName>
            </value>
            <value>
                <fullName>Rancagua</fullName>
            </value>
            <value>
                <fullName>Concepción</fullName>
            </value>
            <value>
                <fullName>Curicó</fullName>
            </value>
            <value>
                <fullName>Viña del Mar</fullName>
            </value>
            <value>
                <fullName>Talca</fullName>
            </value>
            <value>
                <fullName>Los Andes</fullName>
            </value>
            <value>
                <fullName>La Serena</fullName>
            </value>
            <value>
                <fullName>Antofagasta</fullName>
            </value>
            <value>
                <fullName>Puerto Montt</fullName>
            </value>
            <value>
                <fullName>Iquique</fullName>
            </value>
            <value>
                <fullName>Copiapó</fullName>
            </value>
            <value>
                <fullName>Temuco</fullName>
            </value>
            <value>
                <fullName>Osorno</fullName>
            </value>
            <value>
                <fullName>Valdivia</fullName>
            </value>
            <value>
                <fullName>Chillán</fullName>
            </value>
            <value>
                <fullName>Punta Arenas</fullName>
            </value>
            <value>
                <fullName>Los Ángeles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>