force-app/main/default/objects/Account/fields/ZRH_TipoHolding__c.field-meta.xml
<CustomField>
    <fullName>ZRH_TipoHolding__c</fullName>
    <description>Campo interno para identificar si es un Holding abierto o cerrado</description>
    <label>Tipo Holding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abierto</fullName>
                <default>true</default>
                <label>Abierto</label>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>