force-app/main/default/objects/Account/recordTypes/GLBP1_Liquidador.recordType-meta.xml
<RecordType>
    <fullName>GLBP1_Liquidador</fullName>
    <active>true</active>
    <description>Cuenta de liquidador de seguros</description>
    <label>Liquidador</label>
</RecordType>