force-app/main/default/objects/Account/recordTypes/GLBP1_Taller.recordType-meta.xml
<RecordType>
    <fullName>GLBP1_Taller</fullName>
    <active>true</active>
    <description>Cuenta de taller de seguros</description>
    <label>Taller</label>
</RecordType>