force-app/main/default/objects/Account/recordTypes/vlocity_ins__AgencyBrokerage.recordType-meta.xml
<RecordType>
    <fullName>vlocity_ins__AgencyBrokerage</fullName>
    <active>true</active>
    <label>Agency/Brokerage</label>
</RecordType>