force-app/main/default/objects/Account/validationRules/GLB_P1_FechaNacimientoMayora18.validationRule-meta.xml
<ValidationRule>
    <fullName>GLB_P1_FechaNacimientoMayora18</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( RecordType.DeveloperName =&quot;PersonAccount&quot;,
					  TODAY() - PersonBirthdate &lt; 18*365
					)</errorConditionFormula>
    <errorMessage>El cliente debe ser mayor de 18 años</errorMessage>
</ValidationRule>