force-app/main/default/objects/Account/validationRules/GLB_P1_RutEmpresaMayor30000000.validationRule-meta.xml
<ValidationRule>
    <fullName>GLB_P1_RutEmpresaMayor30000000</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( RecordType.DeveloperName =&quot;IndustriesBusiness&quot;,
OR( 
				VALUE(LEFT(GLBP1_Rut__c, (FIND(&quot;-&quot;,GLBP1_Rut__c)) -1 ))&lt;30000000,
			 VALUE(LEFT(GLBP1_Rut__c, (FIND(&quot;-&quot;,GLBP1_Rut__c)) -1 ))&gt;99999999
			)
)</errorConditionFormula>
    <errorDisplayField>GLBP1_Como_quiere_ser_atendida__c</errorDisplayField>
    <errorMessage>El Rut de la empresa debe ser mayor o igual a 30.000.000 y menor a 99.999.999</errorMessage>
</ValidationRule>