force-app/main/default/objects/Account/validationRules/GLB_P1_RutPersonaMenor30000000.validationRule-meta.xml
<ValidationRule>
    <fullName>GLB_P1_RutPersonaMenor30000000</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( RecordType.DeveloperName =&quot;PersonAccount&quot;,
NOT(ISBLANK(GLBP1_Rut__c)),
VALUE(LEFT(GLBP1_Rut__c, (FIND(&quot;-&quot;,GLBP1_Rut__c)) -1 ))&gt;=30000000  ,
NOT( GLBP1_Rut__c= &quot;99999999-0&quot;)
)</errorConditionFormula>
    <errorMessage>El Rut de la persona debe ser menor a 30.000.000</errorMessage>
</ValidationRule>